# python2025-alexigna

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml
mypy_plugins/: incomplete_checker_plugin.py
src/python2025_alexigna/: config.py  main.py  main_v1.py  main_v2.py  utils.py
src/python2025_alexigna/hw_01_black_ruff_wps/: complex_solution_lambda.py  complex_solution_partial.py
src/python2025_alexigna/hw_02_black_ruff_wps/: task1_complex.py  task1_complex_solution_lambda.py  task1_complex_solution_partial.py
src/python2025_alexigna/hw_02_typing/: task1_callable_typevar_solution.py  task2_iterator.py  task2_iterator_solution.py
src/python2025_alexigna/hw_03_mypy/: legacy_code.py  legacy_code.pyi  main.py
src/python2025_alexigna/hw_03_typing/: task1_callable_typevar.py  task1_callable_typevar_solution.py  task3_assert_never.py  task3_assert_never_solution.py  task4_newtype.py  task4_newtype_solution.py  task5_overload.py  task5_overload_solution.py  task6_overload_literal.py  task6_overload_literal_solution.py  task7_typec.py  task7_typec_solution.py
src/python2025_alexigna/hw_04_mypy/: task1_legacy_code.py  task1_legacy_code.pyi  task1_main.py
src/python2025_alexigna/hw_04_oop/redis_rpc/: rpc.py  rpc.pyi  utils.py
src/python2025_alexigna/hw_04_oop/redis_rpc_worker/: docker-compose.yaml  requirements.txt
src/python2025_alexigna/hw_04_oop/redis_rpc_worker/app/tasks/: task_scrapli.py
src/python2025_alexigna/hw_05_oop/: task1_composition.py  task1_conposition.py  task1_weakref.py  task1_weakref_solution.py
src/python2025_alexigna/hw_05_oop/task1_rpc_1/: main.py
src/python2025_alexigna/hw_05_oop/task1_rpc_2/client/: main.py
src/python2025_alexigna/hw_05_oop/task1_rpc_2/rpc/: __init__.py  rpc.py  rpc.pyi  rpc_method.py  rpc_result.py  rpc_result.pyi
src/python2025_alexigna/hw_05_oop/task1_rpc_2/worker/: docker-compose.yaml
src/python2025_alexigna/hw_05_oop/task1_rpc_2/worker/app/: supervisord.conf
src/python2025_alexigna/hw_05_oop/task2_rpc/client/: device_abc.py  device_factory.py  device_protocol.py  main.py  models.py
src/python2025_alexigna/hw_05_oop/task2_rpc/rpc/: __init__.py  exceptions.py  rpc.py  rpc.pyi  rpc_result.py
src/python2025_alexigna/hw_05_oop/task2_rpc/worker/: docker-compose.yaml  dockerfile
src/python2025_alexigna/hw_05_oop/task2_rpc/worker (вариант с supervisor)/: dockerfile  requirements.txt
src/python2025_alexigna/hw_05_oop/task2_rpc/worker/app/tasks/: bad_hello.py  hello.py  send_command.py
src/python2025_alexigna/hw_05_oop/task2_rpc/worker_supervisor/app/: supervisord.conf
src/python2025_alexigna/hw_05_oop/task2_rpc/worker_supervisor/app/tasks/: hello.py
src/python2025_alexigna/hw_05_oop/task2_rpc_1/: main.py  utils.py
src/python2025_alexigna/hw_05_oop/task2_rpc_2/client/: main.py
src/python2025_alexigna/hw_05_oop/task2_rpc_2/rpc/: __init__.py  exceptions.py  rpc.py  rpc.pyi  rpc_method.py  rpc_result.py  rpc_result.pyi
src/python2025_alexigna/hw_05_oop/task2_rpc_2/worker/: requirements.txt
src/python2025_alexigna/hw_05_oop/task2_rpc_2/worker/app/: worker.py
src/python2025_alexigna/hw_05_oop/task2_rpc_2/worker/app/tasks/task_hello/: say_hello.py
src/python2025_alexigna/hw_05_oop/task2_rpc_part_2/client/: main.py
src/python2025_alexigna/hw_05_oop/task2_rpc_part_2/rpc/: __init__.py  exceptions.py  rpc.py  rpc.pyi  rpc_result.py
src/python2025_alexigna/hw_05_oop/task2_rpc_part_2/worker/: docker-compose.yaml
src/python2025_alexigna/hw_05_oop/task2_rpc_part_2/worker/app/tasks/: send_command.py  send_commands.py
src/python2025_alexigna/hw_10_metaclass/: task1_attribute_checker.py
src/python2025_alexigna/hw_10_metaclass/task2_rpc/client/: log.py  main.py
src/python2025_alexigna/hw_10_metaclass/task2_rpc/rpc/: exceptions.py  rpc.py  rpc_method.py  rpc_redis.py  rpc_result.py
src/python2025_alexigna/hw_10_metaclass/task2_rpc/worker/: requirements.txt
src/python2025_alexigna/hw_10_metaclass/task2_rpc/worker/app/tasks/: hello.py
src/python2025_alexigna/hw_11_descriptors/: config.py  main_v1.py  main_v2.py  utils.py
src/python2025_alexigna/hw_13_scrapli/: send_and_read.py  send_and_read_v2.py
src/python2025_alexigna/redis_rpc/: models.py  rpc.py  storage.py
src/python2025_alexigna/redis_rpc_worker/: dockerfile  main.py
(+1 files in other folders)
